--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "classnames": "2.1.2",
     "flux": "^2.0.3",
     "json-stable-stringify": "1.0.0",
+    "keen-dataviz": "0.0.1",
     "keymirror": "~0.1.0",
     "lodash": "3.10.1",
     "moment": "^2.7.0",
