--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "2.2.3",
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
+    "react-date-picker": "^4.0.6",
     "react-dom": "^0.14.3",
     "rquery": "^3.1.1",
     "string": "^2.0.1",
